tests/miniJava/pos/001052_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) { } else while ( 0 ) { } } }
