tests/miniJava/neg/006661_mutation.MiniJava
class java { public static void Main return String [ ] java ) { { } } }
